<resources>
    <string name="a_card">a card</string>
    <string name="a_contact">a contact</string>
    <string name="a_file">a file</string>
    <string name="a_live">a live</string>
    <string name="a_location">a location</string>
    <string name="a_message">a message</string>
    <string name="a_photo">a photo</string>
    <string name="a_post">a post</string>
    <string name="a_sticker">a sticker</string>
    <string name="a_transcript">a transcript</string>
    <string name="a_video">a video</string>
    <string name="About">About</string>
    <string name="about_version">Version %1$s (%2$d)</string>
    <string name="Accept">Accept</string>
    <string name="Access_denied">Access denied</string>
    <string name="access_your_bots_list">access your bots list</string>
    <string name="access_your_circle_list">access your circle list</string>
    <string name="access_your_collectibles">access your collectibles</string>
    <string name="access_your_contacts_list">access your contacts list</string>
    <string name="access_your_snapshots">access your snapshots</string>
    <string name="Account">Account</string>
    <string name="Add">Add</string>
    <string name="Add_address">Add address</string>
    <string name="Add_bot">Add Bot</string>
    <string name="Add_circle">Add Circle</string>
    <string name="Add_Contact">Add Contact</string>
    <string name="Add_conversations">Add Conversations</string>
    <string name="Add_emergency_contact">Add recovery contact</string>
    <string name="Add_group_description">Add group description</string>
    <string name="Add_memo">Add Memo</string>
    <string name="Add_participants">Add Participants</string>
    <string name="Add_people_hint">Add people by Mixin ID or phone number</string>
    <string name="add_people_search_hint">Mixin ID or Phone number</string>
    <string name="Add_Sticker">Add Sticker</string>
    <string name="Add_sticker_failed">Add sticker failed</string>
    <string name="Add_stickers">Add Stickers</string>
    <string name="Add_success">Add success</string>
    <string name="Add_Tag">Add Tag</string>
    <string name="Add_to_Home_screen">Add to Home screen</string>
    <string name="add_or_remove_favorite_bots">Add or remove favorite bots</string>
    <string name="Added">Added</string>
    <string name="Adding">Adding…</string>
    <string name="Address">Address</string>
    <string name="Admin">Admin</string>
    <string name="After_1_minute">After 1 minute</string>
    <string name="After_30_minutes">After 30 minutes</string>
    <string name="Agree_and_Continue">Agree n Continue</string>
    <string name="alert_key_contact_audio_call_message">invites you to a voice call</string>
    <string name="alert_key_contact_audio_message">sent you an audio</string>
    <string name="alert_key_contact_contact_message">sent you a contact</string>
    <string name="alert_key_contact_data_message">sent you a file</string>
    <string name="alert_key_contact_image_message">sent you a photo</string>
    <string name="alert_key_contact_live_message">sent you a live stream</string>
    <string name="alert_key_contact_location_message">sent you a location</string>
    <string name="alert_key_contact_post_message">sent you a post</string>
    <string name="alert_key_contact_sticker_message">sent you a sticker</string>
    <string name="alert_key_contact_text_message">sent you a message</string>
    <string name="alert_key_contact_transcript_message">sent you a transcript</string>
    <string name="alert_key_contact_transfer_message">sent you a transfer</string>
    <string name="alert_key_contact_collectible_message">sent you a collectible</string>
    <string name="alert_key_contact_video_message">sent you a video</string>
    <string name="alert_key_group_audio_invite_message">%1$s invites you to a voice call</string>
    <string name="alert_key_group_audio_message">%1$s sent an audio</string>
    <string name="alert_key_group_contact_message">%1$s sent a contact</string>
    <string name="alert_key_group_data_message">%1$s sent a file</string>
    <string name="alert_key_group_image_message">%1$s sent a photo</string>
    <string name="alert_key_group_live_message">%1$s sent a live stream</string>
    <string name="alert_key_group_location_message">%1$s sent a location</string>
    <string name="alert_key_group_post_message">%1$s sent a post</string>
    <string name="alert_key_group_sticker_message">%1$s sent a sticker</string>
    <string name="alert_key_group_text_message">%1$s sent a message</string>
    <string name="alert_key_group_transcript_message">%1$s sent a transcript</string>
    <string name="alert_key_group_video_message">%1$s sent a video</string>
    <string name="All">All</string>
    <string name="All_Conversations">All Conversations</string>
    <string name="All_Media">All Media</string>
    <string name="All_signer_failure">All nodes failed</string>
    <string name="All_Transactions">All Transactions</string>
    <string name="Allow_bot_access_asset">Allow bot to access your asset list and balance.</string>
    <string name="Allow_bot_access_bots">Allow bot to access your bot list.</string>
    <string name="Allow_bot_access_circles">Allow bot to access your circle list.</string>
    <string name="Allow_bot_access_contact">Allow bot to access your contact list and blocked list.</string>
    <string name="Allow_bot_access_nfts">Allow bot to access your NFT list and balance.</string>
    <string name="Allow_bot_access_number">Allow bot to access your phone number.</string>
    <string name="Allow_bot_access_profile">Allow bot to access your public profile such as name, Mixin ID, avatar, etc.</string>
    <string name="Allow_bot_access_snapshots">Allow bot to access your transfer records, including deposits and withdrawals.</string>
    <string name="Allow_bot_manage_bots">Allow bot to add or modify your bots.</string>
    <string name="Allow_bot_manage_circles">Allow bot to add, modify and delete your circles.</string>
    <string name="Allow_bot_send_messages">Allow bot to send messages on your behalf.</string>
    <string name="Amount">Amount</string>
    <string name="Margin">Margin</string>
    <string name="an_audio">an audio</string>
    <string name="Anonymous_Number">Anonymous Number</string>
    <string name="ANSWER">ANSWER</string>
    <string name="app_card_shareable_false">The card has been set to not allow sharing</string>
    <string name="app_name">Mixin</string>
    <string name="mixin_messenger" translatable="false">Mixin</string>
    <string name="mixin_one">Mixin One</string>
    <string name="App_version">App version</string>
    <string name="Appearance">Appearance</string>
    <string name="Apply">Apply</string>
    <string name="Asset_Key">Asset Key</string>
    <string name="Asset_not_found">Asset not found.</string>
    <string name="ASSETS">ASSETS</string>
    <string name="ASSET_CHANGES">BALANCE CHANGES</string>
    <string name="TOKEN_ACCESS_APPROVAL">PRE-AUTHORIZE AMOUNT</string>
    <string name="MAO">MAO</string>
    <string name="DAPPS">APPS</string>
    <string name="Audio">Audio</string>
    <string name="Audios">Audios</string>
    <string name="auth_assets_more">%1$s and more</string>
    <string name="auth_messages_represent_description">allow bot to send messages on your behalf</string>
    <string name="auth_profile_content">%1$s, %2$s, profile photo</string>
    <string name="authorization">authorization</string>
    <string name="Authorizations">Authorizations</string>
    <string name="permission_authorize">Authorize</string>
    <string name="auto_download_hint">Change auto-download settings for media. Voice messages are always downloaded automatically.</string>
    <string name="Auto_Lock">Auto-Lock</string>
    <string name="avatar_transition_name">avatar_transition_name</string>
    <string name="Back_To_Chat">Back To Chat</string>
    <string name="Back_To_Merchant">Back to Merchant</string>
    <string name="Backing_Up">Backing Up...</string>
    <string name="Backup">Backup</string>
    <string name="Backed_Up">Backed Up</string>
    <string name="backup_choose_a_folder">Choose a folder, backups will be saved to this location</string>
    <string name="Backup_delete">Delete Backup</string>
    <string name="backup_des">Back up your messages to external storage. You can restore them when you reinstall Mixin. Messages you back up are not protected while in external storage.</string>
    <string name="backup_dialog_title">Auto back up to external storage</string>
    <string name="backup_external_storage">External storage: %1$s</string>
    <string name="backup_failure_tip">Backup failure, please try again.</string>
    <string name="Backup_found">Backup found</string>
    <string name="backup_ing">External storage backup…</string>
    <string name="backup_media">Include media files</string>
    <string name="backup_media_title">Back up to external storage</string>
    <string name="backup_no_available_memory">There is not enough available memory for backup.</string>
    <string name="backup_notification_content">Preparing backup…</string>
    <string name="backup_notification_title">Backup in progress</string>
    <string name="background_preview">Background Preview</string>
    <string name="Backup_success">Backup success</string>
    <string name="Block">Block</string>
    <string name="block_confirmations">Block Confirmations</string>
    <string name="block_confirmations_content">Deposit will arrive after at least %1$d block confirmations.</string>
    <string name="block_tip">Blocked users can\'t send you messages or add you to groups.</string>
    <string name="Blocked">Blocked</string>
    <string name="Cancel">Cancel</string>
    <string name="Debug_database">Debug database</string>
    <string name="deposit_account_attention">Attention: Please try a small amount for the first deposit. Both a Memo and an Address are required to successfully deposit your %1$s to Mixin.</string>
    <string name="Done">Done</string>
    <string name="Got_it">Got it</string>
    <string name="Hidden_Assets">Hidden Assets</string>
    <string name="Logs">Logs</string>
    <string name="More">More</string>
    <string name="Save">Save</string>
    <string name="Scan_QR_Code">Scan QR Code</string>
    <string name="Search">Search</string>
    <string name="Settings">Settings</string>
    <string name="Successful">Successful</string>
    <string name="network_fee">Network fee</string>
    <string name="Price">Price</string>
    <string name="Order_Preview">Order Preview</string>
    <string name="Total">Total</string>
    <string name="Pay_with">Pay with</string>
    <string name="Fees">Fees</string>
    <string name="Processing_Fee">Processing Fee</string>
    <string name="Fees_tip">You may be charged additional fees by your bank that are not included in the order. Please contact your bank for more information.</string>
    <string name="Purchase">Purchase</string>
    <string name="Contact_Support">Contact Support</string>
    <string name="depost_address_updated">%1$s Deposit Address Updated</string>
    <string name="depost_address_updated_description">Your %1$s deposit address has been updated. The deposit address will automatically update with system or network upgrades. Old addresses are still valid for deposits, but it is not recommended for further use.</string>
    <string name="Release">Release</string>
    <string name="Set_as_avatar">Set as Avatar</string>
    <string name="View_on_Marketplace">View on Marketplace</string>
    <string name="View_on_Explorer">View on Explorer</string>
    <string name="rename_wallet">Rename Wallet</string>
    <string name="Remove_Wallet">Remove Wallet</string>
    <string name="show_mnemonic_phrase">Show Mnemonic Phrase</string>
    <string name="show_private_key">Show Private Key</string>
    <string name="Forget_Pin">Forgot PIN</string>
    <string name="Switch_Account">Switch Account</string>
</resources>