<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/bg_white"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textColor="?attr/text_assist" />

    <TextView
        android:id="@+id/transactions_tv"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/bg_white"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textColor="?attr/text_primary"
        android:text="@string/All_Transactions" />

    <TextView
        android:id="@+id/hide"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/bg_white"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textColor="?attr/text_primary"
        android:text="@string/Hidden_Assets" />

    <TextView
        android:id="@+id/rename"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/bg_white"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textColor="?attr/text_primary"
        android:text="@string/rename_wallet" />

    <TextView
        android:id="@+id/mnemonic_phrase"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/bg_white"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textColor="?attr/text_primary"
        android:text="@string/show_mnemonic_phrase" />

    <TextView
        android:id="@+id/private_key"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/bg_white"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textColor="?attr/text_primary"
        android:text="@string/show_private_key" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/bg_white"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textColor="@color/wallet_pink"
        android:text="@string/Remove_Wallet" />
</LinearLayout>