<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_upper_round"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/close_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/margin16"
        android:layout_marginEnd="@dimen/margin16"
        android:background="@drawable/mixin_ripple"
        android:padding="8dp"
        android:src="@drawable/ic_close_black"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:text="@string/Order_Preview"
        android:textColor="?text_primary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/chain_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:textColor="?text_assist"
        android:textSize="12sp" />

    <one.mixin.android.widget.BadgeCircleImageView
        android:id="@+id/asset_avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp" />

    <TextView
        android:id="@+id/value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorGreen"
        android:textSize="18sp"
        tools:text="+51.234 USDT" />

    <one.mixin.android.widget.HeadTailView
        android:id="@+id/pay_with"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        app:head="@string/Pay_with" />

    <one.mixin.android.widget.HeadTailView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        app:head="@string/Price" />

    <one.mixin.android.widget.HeadTailView
        android:id="@+id/purchase"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        app:head="@string/Purchase" />

    <one.mixin.android.widget.HeadTailView
        android:id="@+id/gateway_fee"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        app:head="@string/Gateway_fee" />

    <one.mixin.android.widget.HeadTailView
        android:id="@+id/network_fee"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        app:head="@string/network_fee" />

    <one.mixin.android.widget.HeadTailView
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        app:head="@string/Total" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_transfer_done" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/Successful"
        android:textColor="?text_assist"
        android:textSize="14sp" />

    <Button
        android:id="@+id/action_tv"
        style="@style/AppTheme.MaterialButton"
        android:layout_width="116dp"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Done"
        android:textColor="@color/white"
        android:textSize="14sp" />
</LinearLayout>