<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/bg_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/text_assist"
            android:textFontWeight="600"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/text_subtitle"
            android:textFontWeight="400"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/set_avatar_tv"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textColor="?attr/text_primary"
        android:text="@string/Set_as_avatar" />

    <TextView
        android:id="@+id/save_tv"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textColor="?attr/text_primary"
        android:text="@string/Save" />

    <TextView
        android:id="@+id/view_on_marketplace"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textColor="?attr/text_primary"
        android:text="@string/View_on_Marketplace" />

    <TextView
        android:id="@+id/view_on_explorer"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textColor="?attr/text_primary"
        android:text="@string/View_on_Explorer" />

    <TextView
        android:id="@+id/release_tv"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textColor="#E86B67"
        android:text="@string/Release" />

    <TextView
        android:id="@+id/cancel_tv"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textColor="?attr/text_primary"
        android:text="@string/Cancel" />

</LinearLayout>